# KohakuTerrarium

./: .gitignore  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
agents/novel_terrarium/creatures/brainstorm/: config.yaml
agents/novel_terrarium/creatures/planner/: config.yaml
agents/novel_terrarium/creatures/writer/: config.yaml
apps/web/src/components/chat/: ChatPanel.vue
apps/web/src/pages/instances/: [id].vue
apps/web/src/stores/: chat.js
apps/web/src/utils/: api.js
docs/: README.md  docs.config.js
docs/api-reference/: http.md
docs/concepts/: README.md  boundaries.md  glossary.md  patterns.md  serving.md
docs/concepts/foundations/: README.md  composing-an-agent.md  what-is-an-agent.md  why-kohakuterrarium.md
docs/concepts/impl-notes/: README.md  non-blocking-compaction.md  prompt-aggregation.md  session-persistence.md  stream-parser.md
docs/concepts/modules/: README.md  channel.md  controller.md  input.md  memory-and-compaction.md  output.md  plugin.md  session-and-environment.md  sub-agent.md  tool.md  trigger.md
docs/concepts/multi-agent/: README.md  root-agent.md  terrarium.md
docs/concepts/python-native/: README.md  agent-as-python-object.md  composition-algebra.md
docs/dev/: README.md  dependency-graph.md  frontend.md  internals.md  testing.md
docs/develop/: testing.md
docs/guide/: sessions.md
docs/guides/: README.md  composition.md  configuration.md  creatures.md  custom-modules.md  examples.md  frontend-layout.md  getting-started.md  mcp.md  memory.md  packages.md  plugins.md  programmatic-usage.md  serving.md  sessions.md  terrariums.md
docs/reference/: README.md  builtins.md  cli.md  configuration.md  http.md  plugin-hooks.md  python.md
docs/tutorials/: README.md  first-creature.md  first-custom-tool.md  first-plugin.md  first-python-embedding.md  first-terrarium.md
examples/: README.md
examples/agent-apps/swe_agent/: config.yaml
examples/terrariums/code_review_team/: terrarium.yaml
examples/terrariums/code_review_team/creatures/developer/: config.yaml
examples/terrariums/code_review_team/creatures/reviewer/: config.yaml
examples/terrariums/code_review_team/creatures/tester/: config.yaml
examples/terrariums/research_assistant/: terrarium.yaml
examples/terrariums/research_assistant/creatures/analyst/: config.yaml
examples/terrariums/research_assistant/creatures/coordinator/: config.yaml
examples/terrariums/research_assistant/creatures/searcher/: config.yaml
scripts/: add_docs_frontmatter.py  dep_graph.py  test_both_modes.py
src/kohakuterrarium/: __init__.py  __main__.py  packages.py
src/kohakuterrarium-frontend/: index.html  package-lock.json  package.json  uno.config.js  vite.config.js
src/kohakuterrarium-frontend/src/: App.vue  main.js  style.css
src/kohakuterrarium-frontend/src/components/chat/: ChatMessage.vue  ChatPanel.vue  ToolCallBlock.vue
src/kohakuterrarium-frontend/src/components/chrome/: ModelSwitcher.vue
src/kohakuterrarium-frontend/src/components/common/: GemBadge.vue  MarkdownRenderer.vue  SplitPane.vue  StatusDot.vue
src/kohakuterrarium-frontend/src/components/graph/: CreatureNode.vue  HubChannelNode.vue  LeafChannelNode.vue  TopologyGraph.vue
src/kohakuterrarium-frontend/src/components/inspector/: InspectorPanel.vue
src/kohakuterrarium-frontend/src/pages/: index.vue  new.vue  sessions.vue
src/kohakuterrarium-frontend/src/pages/instances/: [id].vue
src/kohakuterrarium-frontend/src/stores/: chat.js  configs.js  inspector.js  instances.js  layoutPanels.js  messages.js  status.js  theme.js
src/kohakuterrarium-frontend/src/utils/: api.js  colors.js  mock.js
src/kohakuterrarium/api/: app.py  deps.py  events.py  main.py  schemas.py
src/kohakuterrarium/api/routes/: agents.py  channels.py  configs.py  creatures.py  files.py  sessions.py  settings.py  terrariums.py
src/kohakuterrarium/api/ws/: agents.py  channels.py  chat.py  logs.py
src/kohakuterrarium/builtin_skills/subagents/: coordinator.md  critic.md  memory_read.md  memory_write.md  research.md  summarize.md  worker.md
src/kohakuterrarium/builtin_skills/tools/: scratchpad.md  send_message.md  think.md  wait_channel.md
src/kohakuterrarium/builtins/: __init__.py
src/kohakuterrarium/builtins/cli_rich/: composer.py
src/kohakuterrarium/builtins/inputs/: __init__.py  cli.py
src/kohakuterrarium/builtins/outputs/: __init__.py
src/kohakuterrarium/builtins/tools/: __init__.py  bash.py  edit.py  glob.py  grep.py  read.py  registry.py  send_message.py  write.py
src/kohakuterrarium/builtins/tui/: input.py  session.py  widgets.py
src/kohakuterrarium/commands/: __init__.py  read.py
src/kohakuterrarium/core/: __init__.py  agent.py  agent_handlers.py  agent_init.py  channel.py  compact.py  config.py  controller.py  conversation.py  environment.py  events.py  executor.py
src/kohakuterrarium/llm/: __init__.py  codex_auth.py  codex_provider.py  codex_rate_limits.py  message.py  profiles.py
src/kohakuterrarium/modules/input/: base.py
src/kohakuterrarium/modules/output/: base.py  router.py
src/kohakuterrarium/modules/subagent/: base.py  config.py  manager.py
src/kohakuterrarium/modules/tool/: __init__.py  base.py
src/kohakuterrarium/modules/trigger/: channel.py
src/kohakuterrarium/parsing/: __init__.py  patterns.py  state_machine.py
src/kohakuterrarium/prompt/: aggregator.py  plugins.py
src/kohakuterrarium/serving/: agent_session.py  manager.py  web.py
src/kohakuterrarium/session/: embedding.py  history.py  store.py
src/kohakuterrarium/terrarium/: api.py  cli.py  creature.py  factory.py  hotplug.py  observer.py  output_wiring.py  persistence.py  runtime.py
src/kohakuterrarium/testing/: __init__.py  agent.py  events.py  llm.py  output.py
src/kohakuterrarium/utils/: file_guard.py  logging.py
tests/integration/: test_channel_prompts.py  test_native_tool_flow.py
tests/unit/: test_api_readonly_endpoints.py  test_bootstrap.py  test_codex_oauth.py  test_compact.py  test_llm_profiles.py  test_run_cli.py  test_terrarium_modules.py  test_unified_config.py  test_ws_error_frames.py
(+14 files in other folders)
