[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KohakuTerrarium"
version = "0.2.0"
description = "A universal agent framework for building self-driven AI agents and multi-agent teams"
authors = [
    { name = "Shih-Ying Yeh (KohakuBlueLeaf)", email = "apolloyeh0123@gmail.com" },
]
license = { text = "KohakuTerrarium-1.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "agent", "llm", "multi-agent", "terrarium", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "httpx>=0.27.0",
    "openai>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
    "kohakuvault>=0.7.0",
    "textual>=3.0.0",
    "html2text>=2024.0.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "gitpython>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/Kohaku-Lab/KohakuTerrarium"
Repository = "https://github.com/Kohaku-Lab/KohakuTerrarium"
Documentation = "https://github.com/Kohaku-Lab/KohakuTerrarium/tree/main/docs"
Issues = "https://github.com/Kohaku-Lab/KohakuTerrarium/issues"

[project.scripts]
kt = "kohakuterrarium.__main__:main"

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=25.12.0",
    "ruff>=0.9.0",
]
discord = [
    "discord.py>=2.0.0",
    "Pillow>=10.0.0",
]
asr = [
    "openai-whisper>=20240930",
    "sounddevice>=0.4.0",
    "numpy>=1.20.0",
]
# Web tools: fetch pages + search
web = [
    "trafilatura>=2.0.0",
    "ddgs>=9.0.0",
]
# Full browser rendering for web_fetch
browser = [
    "crawl4ai>=0.8.0",
]
# Embedding models for session memory search
embeddings-light = [
    "model2vec>=0.8.0",
]
embeddings = [
    "sentence-transformers>=4.0.0",
]
all = [
    "KohakuTerrarium[api,dev,web,browser,embeddings,embeddings-light]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kohakuterrarium.builtin_skills" = ["**/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["F401", "F841"]
